--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -1,16 +1,12 @@
 <div>
-  {% capture ctaContent %}
-    {% section "sale-cta" %}
-  {% endcapture %}
+  {% capture ctaContent %} {% section "sale-cta" %} {% endcapture %}
   {% assign ctaContent = ctaContent | replace: 'class="shopify-section"', 'class="shopify-section-nested"' %}
   {{ ctaContent }}
 </div>
+
+
 {% schema %}
   {
     "name": "footer"
   }
 {% endschema %}
-
-
-
-  {% endschema %}
